update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Docker Registry Configuration
-REGISTRY_URL=registry.ovh-1.moviik.com
+REGISTRY_URL=your_private_registry_url.com
 REGISTRY_USERNAME=your_username
 REGISTRY_PASSWORD=your_password
 
