--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -1,55 +1,56 @@
 name: Build and Push Docker Image
 
 on:
-    push:
-        branches: [ main ]
-    pull_request:
+  push:
+    branches: [main]
+  pull_request:
 
 jobs:
-    test:
-        runs-on: ubuntu-latest
-        
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-            
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                node-version: '18'
-                cache: 'npm'
-            
-            - name: Install dependencies
-              run: npm ci
-            
-            - name: Run smoke tests
-              run: node test/smoke.test.js
-            
-            - name: Run Docker container tests
-              run: ./test/docker.test.sh
+  test:
+    runs-on: ubuntu-latest
 
-    build-and-push:
-        needs: test
-        runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        steps:
-              - name: Checkout repository
-                uses: actions/checkout@v4
-    
-              - name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v3
-    
-              - name: Log in to Docker Hub
-                if: github.event_name != 'pull_request'
-                uses: docker/login-action@v3
-                with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
-    
-              - name: Build and push Docker image
-                uses: docker/build-push-action@v5
-                with:
-                  context: .
-                  file: ./Dockerfile
-                  push: ${{ github.event_name != 'pull_request' }}
-                  tags: ${{ secrets.DOCKER_USERNAME }}/registry-console:latest
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run smoke tests
+        run: node test/smoke.test.js
+
+      - name: Run Docker container tests
+        run: ./test/docker.test.sh
+
+  build-and-push:
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/registry-console:latest
